--- a/block-BHaaci/assets/stylesheet/style.css
+++ b/block-BHaaci/assets/stylesheet/style.css
@@ -51,16 +51,26 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-/* Custom Style */
-body{
-    background:  linear-gradient(rgba(254,121,120,0.7),rgba(254,121,120,0.7)), url(../media/bg-intro-desktop.jpeg) no-repeat ;
-    background-size: cover;
-    width: 100%;
-	font-family: 'Roboto', sans-serif;
+/* My reset */
+*,
+*::after,
+*::before{
+	box-sizing: border-box;
 }
+a{
+	text-decoration: none;
+}
+
 /* general */
+ body{
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+	line-height: 1.5;
+}
+/* container */
 .container{
-	max-width: 1200px;
+	max-width: 1320px;
+	width: 100%;
 	margin: 0 auto;
 	padding: 0 32px;
 }
@@ -69,62 +79,81 @@ body{
 	justify-content: flex-start;
 	align-items: center;
 }
-/* section */
-.article{
-	line-height:1.5;
-	color: white;
-	width: 40%;
-	margin-top: 200px;
+.flex-48{
+	flex:0 1 48%
 }
-h1{
-	line-height: 1.2;
-	margin-bottom: 20px;
-	font-size: 50px;
-}
-/* Form */
-form{
-	margin-left: 70px;
-	margin-top: 160px;
-	width: 45%;
-}
-fieldset{
-	background-color: white;
-	padding: 30px;
-	border-radius: 7px;
-}
-
-.btn-1{
-	width: 100%;
-	 background-color: rgb(93,83,163);
-	 padding: 15px 60px;
-	 border: none;
-	 border-radius: 5px;
-	 color: white;
-	 box-shadow: 1.5px  8px 7px rgb(78, 76, 76);
-	 margin-bottom: 50px;
-}
-.btn-1 small{
-	font-size: 16px;
-}
-input{
-	margin-bottom: 15px;
+main{
+	height: 100vh;
+	background-size: cover;
+	background: url(../media/bg-intro-desktop.jpeg) no-repeat, linear-gradient(rgb(255,121,120),rgb(255,121,120));
 	display: flex;
-	width: 100%;
-	padding: 10px 0;
+	align-items: center;
 }
-.btn-2{
+.intro-text{
+	padding-right: 42px;
+}
+.heading{
+	font-size: 56px;
+	color: white;
+	font-weight: 700;
+}
+.text{
+	font-size: 18px;
+	color: white;
+	margin-top: 24px;
+}
+.btn{
+	display: inline-block;
+	text-align: center;
 	width: 100%;
-	padding: 15px 60px;
-	 border: none;
-	 border-radius: 5px;
-	 color: white;
+	padding: 16px 24px;
+	color: white;
+	border-radius: 6px;
+	box-shadow: 0 6px 12px rgba(0,0,0,0.5);
+}
+.btn-strong{
+	font-weight: 700px;
+}
+.btn-primary{
+	margin-bottom: 32px;
+	background-color: rgb(93,84,163);
+	font-weight: 350;
+	box-shadow: 0 8px 0 rgba(0,0,0,0.2);
+}
+form{
+	background-color: white;
+	padding: 32px;
+	border-radius: 8px;
+}
+.form-control{
+	display: inline-block;
+	width: 100%;
+	padding: 16px 24px;
+	margin-bottom: 16px;
+	border: 1px solid gray;
+	border-radius: 8px;
+	font-size: 18px;
+}
+.form-control:focus{
+	border-color: rgb(110,105,133);
+}
+.btn-secondary{
 	background-color: rgb(55,204,137);
-	margin-bottom: 20px;
+	box-shadow: none;
+	border: 0;
+	font-size: 18px;
+	text-transform: uppercase;
+	border-bottom: 4px solid rgba(0,0,0,0.2);
+	letter-spacing: 1px;
 }
-span{
-	color: red;
-	font-weight: 500;
+form p {
+	text-align: center;
+	color: rgb(201,199,211);
+	font-size: 14px;
+	margin-top: 12px;
 }
-small{
-	color: rgb(209,208,215);
+form p a{
+	color: rgb(239,131,138);
+	font-weight: 600;
+	margin-left: 6px;
 }
