--- a/block-BHaacj/assets/stylesheet/style.css
+++ b/block-BHaacj/assets/stylesheet/style.css
@@ -128,480 +128,385 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-/*General styles*/
+/* Custom Style */
+/* General */
+:root {
+  --priamry:rgb(105,198,187);
+  --secondary:rgb(198,105,149);
+  --textDark:rgb(33,37,41);
+  --textLight:rgb(105,108,108);
+}
 *,
 *::before,
-*::after {
+*::after{
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
-.container-2 {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0;
+a{
+  text-decoration: none;
 }
-.container {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 30px 0;
-}
-body {
+body{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
   line-height: 1.5;
-  font-family: sans-serif;
+  color:var(--textLight);
 }
-.flex {
+.container{
+  max-width: 1380px;
+  width: 100%;
+  margin: 0 auto;
+  box-shadow: 1px 1px 6px rgba(0,0,0,0.5);
+}
+.padding{
+  padding: 80px 0;
+}
+.margin-top{
+  margin-top: 48px;
+}
+.flex{
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
-.center {
+.item-start{
+  align-items: flex-start;
+}
+.item-stretch{
+  align-items: stretch;
+}
+.justify-center{
+  justify-content: center;
+}
+.justify-end{
+  justify-content: end;
+}
+.flex-20{
+  flex: 0 1 20%;
+}
+.flex-30{
+  flex: 0 1 30%;
+}
+.flex-46{
+  flex: 0 1 46%;
+}
+.flex-50{
+  flex: 0 1 50%;
+}
+.grow{
+  flex: 1 1 auto;
+}
+.font-0{
+  font-size: 0;
+}
+.text-center{
+  text-align: center;
+}
+.center{
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.justify-end {
-  justify-content: flex-end;
+.coloumn{
+  flex-direction: column;
 }
-/* Custom Style */
-.header {
-  align-items: center;
+/* Buttons */
+.btn{
+  display: inline-block;
+  padding: 16px;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 1px;
+  transition: box-shadow 200ms ease-in-out ;
 }
-header {
+.btn-primary{
+  background-color: var(--priamry);
+  color: white;
+}
+.btn-secondary{
+  color:var(--priamry);
   background-color: white;
 }
+.btn:hover{
+  box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+}
 
-.home nav ul li a {
-  text-decoration: none;
-  font-size: 25px;
-  color: black;
-  font-size: 10px;
-  margin-left: 60px;
-  font-weight: bold;
+/* header */
+.header{
+  padding: 32px 0px;
 }
-.header .logo a {
-  align-items: center;
-  text-decoration: none;
-  color: black;
-  font-weight: bold;
-  font-size: 25px;
+.header .container{
+  padding: 0 160px;
+  box-shadow: none;
 }
-.home .home-nav a {
-  color: #80cec4;
+.logo{
+  font-size: 36px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--textDark);
 }
-/*Begin Section*/
-main {
-  background-color: #e6e6e6;
+.logo img{
+  margin-right: 6px;
 }
-.begin {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(../media/banner.jpg);
-  background-repeat: no-repeat;
+.nav-menu-item{
+  margin-left: 48px;
+}
+.nav-menu-item .active{
+  color: var(--priamry);
+}
+.nav-menu-item a{
+  color: var(--textDark);
+  font-weight: 700;
+  font-weight: 14px;
+}
+.nav-menu-item a:hover{
+  color: var(--priamry);
+}
+/* main */
+main{
+  background-color: rgb(230,230,230);
+}
+/* Hero */
+.hero{
+  background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.5)), url(../media/banner.jpg) no-repeat;
   background-size: cover;
   padding: 120px 0;
-}
-.begin-heading {
-  text-align: center;
-  padding: 60px;
-  padding-bottom: 0px;
-}
-.begin-heading h1 {
-  color: white;
-  font-size: 30px;
-  text-transform: uppercase;
-}
-.begin-heading p {
-  color: rgb(197, 193, 193);
-  font-size: 20px;
-  margin: 10px;
-}
-.drop-down {
-  justify-content: center;
-}
-.begin-heading .drop-down i {
-  color: white;
-  font-size: 10px;
-  padding-top: 10px;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-color: #80cec4;
-}
-
-/*form area*/
-.form-area {
-  margin: 30px 60px;
-
-  background-color: white;
-}
-fieldset {
-  padding: 30px;
-}
-fieldset input {
-  display: block;
-}
-label {
-  display: flex;
-  flex-direction: column;
-  color: black;
-  font-size: 12px;
-  font-weight: bold;
-}
-fieldset .label-destination input {
-  outline: none;
-  border: 0;
-  margin: 10px 0 10px 10px;
-  color: black;
-  font-size: 12px;
-}
-::placeholder {
-  color: gray;
-}
-.label-destination input:focus {
-  color: black;
-}
-fieldset select {
-  margin: 10px 0 10px 10px;
-  font-size: 12px;
-  border: 0;
-  outline: none;
-  color: gray;
-}
-fieldset select option {
-  width: 60px;
-}
-.fieldset-2 {
-  margin: 0;
-}
-
-.fieldset-2 .availbility {
-  background-color: #68c6ba;
-  border: 0;
-  padding: 16px;
-  display: block;
-  width: 100%;
-  margin-top: 10px;
-  color: white;
-  margin-left: 50px;
-}
-.date {
-  align-items: baseline;
-}
-/*journey section*/
-
-.journey {
-  background-color: #efefef;
   text-align: center;
 }
-.journey-box h2 {
-  font-size: 25px;
+.hero-heading{
   text-transform: uppercase;
-}
-.journey-box h2 span {
-  font-weight: bold;
-}
-.journey-box p {
-  font-size: 12px;
-  color: gray;
-  margin: 10px 0;
-}
-.journey-box button,
-.europe button,
-.asia button,
-.america button {
-  text-transform: uppercase;
-  border: 0;
-  background-color: #80cec4;
   color: white;
-  padding: 16px;
-  margin-top: 10px;
-  font-size: 12px;
+  font-weight: 500;
+  font-size: 56px;
+  margin-bottom: 16px;
 }
-.asia .article button {
-  background-color: white;
-  color: #c66994;
-}
-/*article*/
-
-.europe button,
-.asia button,
-.america button {
-  background-color: white;
-  color: #80cec4;
-}
-.europe,
-.asia,
-.america {
-  background-color: white;
-}
-
-.europe-image,
-.asia-image,
-.america-image {
-  flex: 0 1 50%;
-}
-
-.font-0 {
-  font-size: 0;
-}
-
-.asia-image {
-  flex: 0 1 50%;
-}
-
-.europe .article,
-.america .article,
-.asia .article {
-  flex: 0 1 50%;
-  padding: 20px;
-  align-self: center;
-  align-items: center;
-  font-size: 0;
-}
-
-.img {
-  width: 100%;
-  object-fit: cover;
-  -o-object-fit: cover;
-}
-.article h2 {
+.hero-sub-heading{
   color: white;
-  font-size: 25px;
+  font-size: 24px;
+  margin-top: 16px;
 }
-.article p {
-  color: white;
-  font-size: 10px;
-  margin: 10px 0;
-}
-.europe .article,
-.america .article {
-  background-color: #80cec4;
-  position: relative;
-
-  left: -72px;
-}
-.asia .article {
-  background-color: #c66994;
-  position: relative;
-  right: -72px;
-  z-index: 1;
-}
-.america .article {
-  background-color: #80cec4;
-}
-.article-col-left {
-  position: relative;
-}
-.article-col-right {
-  position: relative;
-}
-.nav-btn-container-asia {
-  position: absolute;
-  /* top:50%; */
-  left: 60px;
-  bottom: 40%;
-}
-.nav-btn-container {
-  position: absolute;
-  /* top:50%; */
-  right: 60px;
-  bottom: 40%;
-}
-.nav-btn {
+.icon-box{
   width: 60px;
   height: 60px;
-  background-color: rgba(0, 0, 0, 0.6);
-  margin: 0 12px;
+  border-radius: 50%;
+  background-color: var(--priamry);
+  margin: 0 auto;
+  line-height: 60px;
+  margin-top: 16px;
 }
-.nav-btn-icon {
+.icon-box i{
+  color: white;
+  font-size: 18px;
+}
+/* hero form */
+form{
+  background-color: white;
+  max-width: 968px;
+  margin: 0 auto;
+  padding: 32px;
+  margin-top: 80px;
+}
+label{
+  display: block;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: left;
+  color: var(--textDark);
+  margin-bottom: 8px;
+}
+.form-control{
+  width: 100%;
+  display: block;
+  border: 0;
+  outline: 0;
+  padding: 12px 16px;
+  border: 1px solid transparent;
+  color: rgb(158,164,169);
+}
+.form-control::placeholder{
+  color: rgb(158,164,169);
+}
+.form-control:focus{
+  border: 1px solid var(--priamry);
+}
+form .btn{
+  width: 100%;
+  border: 0;
+  box-shadow: none;
+}
+/* Destination */
+.about{
+  background-color: rgb(239,239,239);
+
+}
+.about-wrapper{
+  width: 968px;
+  margin: 0 auto;
+}
+.about h2{
+  font-size: 32px;
+  color: var(--textDark);
+}
+.about h2 strong{
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.about p{
+  margin: 32px 0;
+}
+/* Blog */
+.article{
+  background-color: white;
+}
+.article-col-left{
+  position: relative;
+}
+.nav-btn{
+  width: 60px;
+  height: 60px;
+  background-color: rgba(0,0,0,0.6);
+  margin-left: 5px;
+}
+.nav-btn-container{
+  position: absolute;
+  top: 45%;
+}
+.nav-btn-container-left{
+  left: 48px;
+}
+.nav-btn-container-right{
+  right: 60px;
+}
+.nav-btn-icon{
   width: 32px;
   height: 32px;
   background-color: white;
   border-radius: 50%;
 }
-.nav-btn i {
+ .article .nav-btn-icon img{
+   width: 16px;
+
+ }
+.article-col-right{
+  position: relative;
+  z-index: 1;
+  background-color: var(--priamry);
+  padding: 32px;
   color: white;
+  
 }
-/*Asia section*/
-.active:hover {
-  background-color: #c66994;
+.left{
+  left: -60px;
 }
-.left-white-box {
-  width: 50%;
+.right{
+  right: -60px;
+}
+.article h3{
+  font-size: 36px;
+  margin-bottom: 12px;
+}
+.article p{
+  margin-bottom: 12px;
+}
+.article img{
+  width: 100%;
+}
+.bg-secondary{
+  background-color: rgb(198,105,148);
+}
+/* Maps */
+.maps{
+  background-color: var(--priamry);
+}
+.maps .active{
+  background-color: var(--secondary);
+}
+.maps .grow{
+  padding: 60px 0;
+}
+.maps .grow:hover{
+  background-color: rgb(198,105,148);
+}
+.maps p{
+  font-size: 16px;
+  text-transform: uppercase;
+  color: white;
+  margin-top: 8px;
+}
+.recomended-item{
+  max-width: 968px;
+  margin: 0 auto;
+  background-color: var(--priamry);
+  margin-bottom: 32px;
+}
+.recomended-item-content{
+  position: relative;
+  padding: 32px;
   background-color: white;
+  border-top-right-radius: 16px;
+  border-bottom-right-radius: 16px;
 }
-.left-asia i,
-.right-asia i {
-  color: gray;
-  padding: 10px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
-}
-.country {
-  background-color: #80cec4;
-  align-items: center;
-  justify-content: space-between;
-}
-.country div:hover {
-  padding: 30px 0px;
-  background-color: #c66994;
-  text-align: center;
-}
-.country .asia-png {
-  background-color: #c66994;
-  padding: 30px 0px;
-}
-.country h2 {
-  font-size: 10px;
-  color: white;
+.recomended-item h3{
+  font-size: 24px;
+  font-weight: 600;
   text-transform: uppercase;
-  text-align: center;
+  color: var(--textDark);
 }
-.country img {
-  width: 100%;
+.recomended-item h4{
+  font-weight: 600;
+  font-size: 14px;
+  color: var(--secondary);
+  margin-bottom: 12px;
 }
-/*hotel section*/
-.hotel {
-  background-color: white;
+.recomended-item p{
+  font-size: 14px;
+  font-weight: 400;
 }
-.hotel .hotel-article h2 {
-  font-size: 15px;
+.recomended-item-price h4{
+  font-size: 32px;
+  font-weight: 700;
+  color: white;
+}
+.recomended-item-price a{
   text-transform: uppercase;
-  font-weight: bold;
-}
-.hotel .hotel-article h3 {
-  font-size: 10px;
-  color: #c66994;
-  margin: 10px 0;
-}
-.hotel .hotel-article p {
-  font-size: 12px;
-  color: gray;
-}
-.hotel .hotel-article {
-  padding: 26px;
-  width: 50%;
-}
-
-.hotel .hotel-price {
-  background-color: #80cec4;
-
-  justify-content: flex-start;
-
-  align-items: center;
-}
-.price {
-  margin-left: 22px;
-  text-align: center;
-}
-.hotel .hotel-price h2 {
+  font-size: 14px;
+  font-weight: 700;
   color: white;
-  font-size: 25px;
 }
-.hotel .hotel-price h3 {
-  color: white;
-  font-size: 15px;
-}
-.hotel .hotel-img {
-  width: 27%;
-}
-.hotel .hotel-img img {
+.width-full{
   width: 100%;
 }
-.hotel .hotel-price {
-  width: 21%;
+.btn-curve{
+  position: absolute;
+  right:-24px;
+  top: 0;
+  height: 100%;
 }
-.hotel {
-  width: 100%;
-  padding-top: 50px;
-}
-.hotel-box {
-  border: 1px solid rgb(240, 235, 235);
-  padding: 0;
-  margin-top: 20px;
-}
-.hotel-button button {
-  background-color: #80cec4;
-  border: 0;
-  padding: 12px;
-  color: white;
-  text-transform: uppercase;
-  font-size: 12px;
-}
-.hotel-button {
-  justify-content: center;
-  margin-top: 30px;
-  padding-bottom: 30px;
-}
-.map iframe {
-  width: 100%;
-  font-size: 0;
-}
-.map-block {
+/* Contact */
+.contact{
   position: relative;
 }
-.overlay {
+.overlay{
   position: absolute;
   left: 0;
   right: 0;
-  top: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.4);
+  top: 0;
+  background-color: rgba(0,0,0,0.6);
 }
-.map {
-  position: relative;
-}
-
-.form {
-  width: 35%;
-  background-color: white;
-  padding: 15px;
+.contact form{
   position: absolute;
-
+  top: 0;
+  bottom: 80px;
   right: 80px;
-  bottom: 70px;
-  top: 65px;
+  z-index: 2;
+  width: 30%;
 }
-.form input {
-  display: block;
-  width: 100%;
-  text-transform: capitalize;
-  padding: 10px;
-  margin: 5px 0px;
-  background-color: rgb(238, 232, 232);
-  outline: none;
-  border: 0;
+.contact .form-control{
+  background-color: rgb(245,245,245);
+  margin-bottom: 16px;
 }
-.form textarea {
-  display: block;
-  width: 100%;
-  background-color: rgb(238, 232, 232);
-  margin: 10px 0px;
-  border: 0;
-  color: gray;
-
-  outline: none;
-}
-.form .email {
-  margin-left: 5px;
-}
-.form .name {
-  margin-right: 5px;
-}
-.form .submit {
+/* Footer */
+.footer{
+  background-color: var(--priamry);
   color: white;
-  text-transform: uppercase;
-  background-color: #80cec4;
-  margin-bottom: 0;
-}
-
-.footer {
-  background-color: #80cec4;
-  padding: 30px;
-}
-.footer h2 {
-  font-size: 10px;
-  text-align: center;
-  color: white;
-}
-.footer-section {
-  background-color: #e6e6e6;
+  padding: 48px 0;
 }
